# PicSharp

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/picsharp-app/: index.html  package-lock.json  package.json  release-notes.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/picsharp-app/src/: App.tsx  constants.ts  index.css  main.tsx  routes.tsx  vite-env.d.ts
apps/picsharp-app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.conf.json5  tauri.linux.conf.json  tauri.macos.conf.json
apps/picsharp-app/src-tauri/capabilities/: default.json  desktop.json
apps/picsharp-app/src-tauri/icons/: icon1.icns  icon2.icns  icon3.icns
apps/picsharp-app/src-tauri/resources/: settings.default.json
apps/picsharp-app/src-tauri/src/: command.rs  file.rs  inspect.rs  lib.rs  stream.rs  window.rs
apps/picsharp-app/src/components/: error-boundary.tsx  fullscreen-progress.tsx  link.tsx  path-tags-input.tsx  sidecar-error-toast.tsx  theme-provider.tsx  upload-widget.tsx  window-control.tsx
apps/picsharp-app/src/extends/: SidecarError.ts
apps/picsharp-app/src/hooks/: useNavigate.ts  useReport.ts
apps/picsharp-app/src/i18n/: index.ts
apps/picsharp-app/src/pages/: message-demo.tsx
apps/picsharp-app/src/store/: app.ts  compression.ts  settings.ts  trafficLight.ts  withStorageDOMEvents.ts
apps/picsharp-app/src/types/: global.d.ts
apps/picsharp-app/src/utils/: apm.ts  clipboard.ts  compressor.ts  fs-watch.ts  fs.ts  index.ts  logger.ts  menu.ts  notification.ts  tray.ts  updater.ts  window.ts
(+75 files in other folders)
